# nagel-schreckenberg

./: .gitignore  CMakeLists.txt  Makefile  README.md  car.cc  car.h  car_factory.h  config.cc  config.h  csv_car_factory.cc  csv_car_factory.h  get_galib.sh  main.cc  nash.cc  nash.config  search_params.cc  simple_car_factory.cc  simple_car_factory.h  statistics.cc  statistics.h  track.cc  track.h
cmake/: FindGAlib.cmake  FindGoogleTest.cmake  Findallegro.cmake
configs/: default.config  default.ga_config  extended.config  ga.config  nagel.config
data/: default.config  evropska_20.csv  evropska_21.csv  evropska_22.csv  evropska_orig.csv  ga_params.txt  nash.config  samples.csv
data/prague/: analyzed_evropska_20.txt  analyzed_evropska_21.txt  analyzed_evropska_22.txt  analyzed_evropska_all.txt  evropska_21.csv  evropska_21_22.csv  evropska_22.csv  evropska_all.csv
data/prague_summary/: 10m_evropska_20.csv  10m_evropska_21.csv  15m_evropska_20.csv  15m_evropska_21.csv  30m_evropska_20.csv  30m_evropska_21.csv  5m_evropska_20.csv  5m_evropska_21.csv  60m_evropska_20.csv  60m_evropska_21.csv  all_evropska_21.csv
data/seattle/tripId-1/: testSet.txt  trainSet.txt
data/seattle/tripId-2/: testSet.txt  trainSet.txt
data/seattle/tripId-3/: testSet.txt  trainSet.txt
data/seattle/tripId-4/: testSet.txt  trainSet.txt
data/seattle/tripId-5/: testSet.txt  trainSet.txt
data/seattle/tripId-6/: testSet.txt  trainSet.txt
data/seattle/tripId-7/: testSet.txt  trainSet.txt
data/seattle/tripId-8/: testSet.txt  trainSet.txt
results/: 1test.config  1test.ga_config  1test.generations  1test.txt  2test.ga_config  2test.generations  2test.output  3test.ga_config  3test.generations  3test.txt  4test.ga_config  4test.generations  4test.txt  5test.ga_config  5test.generations  5test.output  6test.config  6test.ga_config  6test.generations  6test.txt  7test.config  7test.example  7test.fund_config  7test.ga_config  7test.generations  7test.output  8test.config  8test.example  8test.fund_config  8test.ga_config  8test.generations  8test.output  nagel.fund_config
src/: analyzer.cc  car.cc  car.h  cell.h  config.cc  config.h  ga_config.cc  ga_config.h  main.cc  search_params.cc  statistics.cc  statistics.h  tools.cc  track.cc  track.h  world.cc  world.h
src/car_factory/: car_factory.h  csv_car_factory.cc  csv_car_factory.h  dummy_car_factory.h  normal_car_factory.cc  normal_car_factory.h  prague_car_factory.cc  prague_car_factory.h  seattle_car_factory.cc  seattle_car_factory.h  simple_car_factory.cc  simple_car_factory.h
tests/: config.cc  config_test.cc  nash.config  seattle_car_factory_test.cc  seattle_test.txt  tests.cc  track_test.cc
